# etrade-mcp

./: .env.example  .gitignore  README.md  authenticate.py  pyproject.toml  requirements.txt
etrade_mcp/: __init__.py  auth.py  market.py  server.py
